--- a/ResearchNotebook.ipynb
+++ b/ResearchNotebook.ipynb
@@ -12,7 +12,6 @@
         "Oz9Mj44qX3yE",
         "h9V4T8Lyas-0",
         "YmZeVrlPayAO",
-        "eQQf79Uja3fb",
         "2SSeI21qbn9s",
         "Nol6bNhKbiea",
         "wSK5lXv4bqhA",
@@ -33,7 +32,7 @@
       ],
       "toc_visible": true,
       "mount_file_id": "1gJHERMMK1bJ3KhLtvY51uHK1HD49dAac",
-      "authorship_tag": "ABX9TyPn71xwzrYHdNc9ACSqYGFx",
+      "authorship_tag": "ABX9TyN0ze8rkuK1cy0yr+jA+U5z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,7 +235,8 @@
         "id": "2SSeI21qbn9s"
       },
       "source": [
-        "## SVM"
+        "## SVM\n",
+        "[Example Used](https://scikit-learn.org/stable/modules/generated/sklearn.svm.LinearSVC.html)"
       ]
     },
     {
@@ -245,7 +245,12 @@
         "id": "WWNv5hbbbn95"
       },
       "source": [
-        ""
+        "from sklearn.svm import LinearSVC\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "svm_clf = make_pipeline(StandardScaler(),\n",
+        "                    LinearSVC(random_state=0, tol=1e-5))\n"
       ],
       "execution_count": null,
       "outputs": []
