--- a/ResearchNotebook.ipynb
+++ b/ResearchNotebook.ipynb
@@ -25,7 +25,7 @@
       ],
       "toc_visible": true,
       "mount_file_id": "1gJHERMMK1bJ3KhLtvY51uHK1HD49dAac",
-      "authorship_tag": "ABX9TyOWrkfDL2Wv84EpAxbrE0Nk",
+      "authorship_tag": "ABX9TyN52SNDY3ycw+jRwO7lreNI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -959,9 +959,50 @@
         "id": "bBaqu1cxb_1d"
       },
       "source": [
-        ""
+        "# from keras.preprocessing.image import ImageDataGenerator\n",
+        "# datagen = ImageDataGenerator(\n",
+        "#     rotation_range=0,\n",
+        "#     width_shift_range=0.1,\n",
+        "#     height_shift_range=0.1,\n",
+        "#     zoom_range = 0.2,\n",
+        "#     horizontal_flip=True,\n",
+        "#     validation_split=0.20)\n",
+        "# datagen.fit(x_train)\n",
+        "\n",
+        "# # fits the model on batches with real-time data augmentation:\n",
+        "# model.fit(datagen.flow(x_train, y_train, batch_size=32),\n",
+        "#           steps_per_epoch=len(x_train) / 32, epochs=epochs)\n",
+        "\n",
+        "# Importing necessary functions\n",
+        "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
+        "\n",
+        "# Initialising the ImageDataGenerator class.\n",
+        "# We will pass in the augmentation parameters in the constructor.\n",
+        "datagen = ImageDataGenerator(\n",
+        "\t\trotation_range = 40,\n",
+        "\t\tshear_range = 0.2,\n",
+        "\t\tzoom_range = 0.2,\n",
+        "\t\thorizontal_flip = True,\n",
+        "\t\tbrightness_range = (0.5, 1.5))\n",
+        "\t\n",
+        "# Loading a sample image\n",
+        "img = load_img('image.jpg')\n",
+        "# Converting the input sample image to an array\n",
+        "x = img_to_array(img)\n",
+        "# Reshaping the input image\n",
+        "x = x.reshape((1, ) + x.shape)\n",
+        "\n",
+        "# Generating and saving 5 augmented samples\n",
+        "# using the above defined parameters.\n",
+        "i = 0\n",
+        "for batch in datagen.flow(x, batch_size = 1,\n",
+        "\t\t\t\t\t\tsave_to_dir ='preview',\n",
+        "\t\t\t\t\t\tsave_prefix ='image', save_format ='jpeg'):\n",
+        "\ti += 1\n",
+        "\tif i > 5:\n",
+        "\t\tbreak\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
