--- a/ResearchNotebook.ipynb
+++ b/ResearchNotebook.ipynb
@@ -25,7 +25,7 @@
       ],
       "toc_visible": true,
       "mount_file_id": "1gJHERMMK1bJ3KhLtvY51uHK1HD49dAac",
-      "authorship_tag": "ABX9TyN52SNDY3ycw+jRwO7lreNI",
+      "authorship_tag": "ABX9TyOrza6TIXdF0FYx30oEZFjU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,32 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Muhammad0Awais/MS_Thesis/blob/experiment1/ResearchNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OQMfnWz0Dfou"
+      },
+      "source": [
+        "# Experimentations\n",
+        "The purpose of this experiment is to test the performance of different classifiers with different datasets, the result of this experiment will be able to give us the answers to the following questions:\n",
+        "*   Which Augmentation technique works best with with model?\n",
+        "*   Which Augmentation technique gives best accuracy for a specific model on a specific dataset?\n",
+        "*   Which Augmentation technique has given the best overall results?\n",
+        "*   Which ml model works best in all the dataset?\n",
+        "*   How changes in parameters are effecting the accuracy of a given model?\n",
+        "*   What Datasets are performing better with most of the models and most of augmentations?\n",
+        "\n",
+        "These questions will be answered at the end of this experimentation, which will result into making a baseline of our research, after these experiments we will be able to know what is the effect of datasets, and augmentation techniques on ML models.\n",
+        "\n",
+        "In the next sections we are Exploring datasets, getting small chunks from datasets, setting up the ml models, and writing the code for augmentations, after compelition of these tasks, we will use those datasets to perform different experiments.\n",
+        "\t\t\t\t\t\n",
+        "\t\t\t\t\t\n",
+        "\t\t\t\t\t\n",
+        "\t\t\t\t\t\n",
+        "\t\t\t\t\t\n",
+        "\t\t\t\t\t"
       ]
     },
     {
