--- a/ResearchNotebook.ipynb
+++ b/ResearchNotebook.ipynb
@@ -21,11 +21,12 @@
         "JDrPpMQebs2U",
         "_gk4lbg9bs_K",
         "WGvuFW2CbtGm",
-        "X12tzro-btNj"
+        "X12tzro-btNj",
+        "xKncFqbMcB79"
       ],
       "toc_visible": true,
       "mount_file_id": "1gJHERMMK1bJ3KhLtvY51uHK1HD49dAac",
-      "authorship_tag": "ABX9TyOrza6TIXdF0FYx30oEZFjU",
+      "authorship_tag": "ABX9TyPt2s1/wCcSs6O0EdFBT81R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +56,9 @@
       "source": [
         "# Experimentations\n",
         "The purpose of this experiment is to test the performance of different classifiers with different datasets, the result of this experiment will be able to give us the answers to the following questions:\n",
-        "*   Which Augmentation technique works best with with model?\n",
+        "\n",
+        "\n",
+        "> *   Which Augmentation technique works best with with model?\n",
         "*   Which Augmentation technique gives best accuracy for a specific model on a specific dataset?\n",
         "*   Which Augmentation technique has given the best overall results?\n",
         "*   Which ml model works best in all the dataset?\n",
@@ -64,7 +67,9 @@
         "\n",
         "These questions will be answered at the end of this experimentation, which will result into making a baseline of our research, after these experiments we will be able to know what is the effect of datasets, and augmentation techniques on ML models.\n",
         "\n",
-        "In the next sections we are Exploring datasets, getting small chunks from datasets, setting up the ml models, and writing the code for augmentations, after compelition of these tasks, we will use those datasets to perform different experiments.\n",
+        "> In the next sections we are Exploring datasets, getting small chunks from datasets, setting up the ml models, and writing the code for augmentations, after compelition of these tasks, we will use those datasets to perform different experiments.\n",
+        "\n",
+        "\n",
         "\t\t\t\t\t\n",
         "\t\t\t\t\t\n",
         "\t\t\t\t\t\n",
@@ -976,7 +981,9 @@
         "id": "1xmIO4cOcUV1"
       },
       "source": [
-        "## Geometric-Augmentations"
+        "## Geometric-Augmentations\n",
+        "\n",
+        "[Example code](https://www.geeksforgeeks.org/python-data-augmentation/)"
       ]
     },
     {
@@ -1046,7 +1053,21 @@
         "id": "hyQ0my_4cY41"
       },
       "source": [
-        ""
+        "class photoMetric:\n",
+        "  def sharpen(image):\n",
+        "    pass\n",
+        "  \n",
+        "  def blur(image):\n",
+        "    pass\n",
+        "  \n",
+        "  def brighten(image):\n",
+        "    pass\n",
+        "\n",
+        "  def contrast(image):\n",
+        "    pass\n",
+        "  \n",
+        "  def invert(image):\n",
+        "    pass\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -1066,7 +1087,9 @@
         "id": "SxyoHCMxceDd"
       },
       "source": [
-        ""
+        "class datasetAugment:\n",
+        "  def combineDataset(dataset1, dataset2):\n",
+        "    pass"
       ],
       "execution_count": null,
       "outputs": []
@@ -1077,7 +1100,8 @@
         "id": "uATYZWlYcefi"
       },
       "source": [
-        "## Auto-Augment"
+        "## Auto-Augment\n",
+        "[Example code](https://github.com/DeepVoltaire/AutoAugment)"
       ]
     },
     {
@@ -1086,9 +1110,14 @@
         "id": "VtgUqNF2cgbx"
       },
       "source": [
-        ""
+        "import PIL\n",
+        "from autoaugment import ImageNetPolicy\n",
+        "# image = PIL.Image.open(\"/content/image.jpg\")\n",
+        "# policy = ImageNetPolicy()\n",
+        "# transformed = policy(image)\n",
+        "# transformed.save(\"tranImage.jpg\")"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
