--- a/ResearchNotebook.ipynb
+++ b/ResearchNotebook.ipynb
@@ -21,7 +21,7 @@
       ],
       "toc_visible": true,
       "mount_file_id": "1gJHERMMK1bJ3KhLtvY51uHK1HD49dAac",
-      "authorship_tag": "ABX9TyMfzy716lIBzfd2UkPoejxt",
+      "authorship_tag": "ABX9TyMi5S+Pnxwjx3+5NlkOnGYE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -599,7 +599,7 @@
         "svm_clf = make_pipeline(StandardScaler(),\n",
         "                    LinearSVC(random_state=0, tol=1e-5))\n"
       ],
-      "execution_count": 4,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -1296,18 +1296,77 @@
         "    gm_aug = geometric(im)\n",
         "    rot = gm_aug.rotate()\n",
         "    aug_rotate_dic[key].append(im)\n",
-        "    aug_rotate_dic[key].append(rot)\n",
-        "# im = cifar_dic[0][0]\n",
-        "# pyplot.imshow(im)\n",
-        "# pyplot.show()\n",
-        "# # print(im)\n",
-        "# gm_aug = geometric(im)\n",
-        "# im2 = gm_aug.flip()\n",
-        "# pyplot.imshow(im2)\n",
-        "# pyplot.show()"
+        "    aug_rotate_dic[key].append(rot)"
       ],
       "execution_count": 67,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IzfFiKsTgJ7B"
+      },
+      "source": [
+        "Train test split"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WkXtbT5Ne67v"
+      },
+      "source": [
+        "X = []\n",
+        "y = []\n",
+        "for key in cifar_dic.keys():\n",
+        "  for val in cifar_dic[key]:\n",
+        "    X.append(val)\n",
+        "    y.append(key)\n",
+        "\n",
+        "# print(len(X), len(y))\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y, test_size=0.33, random_state=42)"
+      ],
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3jPCjyUNgJaX"
+      },
+      "source": [
+        "applying SVM"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GTfxfJ3-gI20",
+        "outputId": "2d0cd79a-cc69-4b82-98c5-65e088faedf9"
+      },
+      "source": [
+        "len(X_train)"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "33"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 88
+        }
+      ]
     },
     {
       "cell_type": "markdown",
